@@ -22,6 +22,8 @@
 *  This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
 
+require_once(PATH_tslib.'class.tslib_pibase.php');
+require_once($GLOBALS['PATH_community'] . 'classes/class.tx_community_applicationmanager.php');
 
 /**
  * central application controller for the community extension
@@ -30,7 +32,12 @@
  * @package TYPO3
  * @subpackage community
  */
-class tx_community_controller_CommunityApplication {
+class tx_community_controller_CommunityApplication extends tslib_pibase {
+	public $prefixId      = 'tx_community_controller_CommunityApplication';		// Same as class name
+	public $scriptRelPath = 'controller/class.tx_community_controller_communityapplication.php';	// Path to this script relative to the extension dir.
+	public $extKey        = 'community';	// The extension key.
+
+	public $conf;
 
 	/**
 	 * constructor for class tx_community_controller_CommunityApplication
@@ -39,9 +46,45 @@ class tx_community_controller_CommunityApplication {
 
 	}
 
-	public function execute() {
+	public function initialize($configuration) {
+		$this->conf = $configuration;
+		$this->tslib_pibase();
+		$this->pi_setPiVarDefaults();
+		$this->pi_USER_INT_obj = 1; // Configuring so caching is not expected. This value means that no cHash params are ever set. We do this, because it's a USER_INT object!
+		$this->pi_initPIflexForm();
 
-		return 'hello community!';
+		$this->conf = t3lib_div::array_merge_recursive_overrule(
+			$this->conf,
+			$GLOBALS['TSFE']->tmpl->setup['plugin.']['tx_community.']
+		);
+	}
+
+	public function execute($content, $configuration) {
+		$content = '';
+		$this->initialize($configuration);
+
+		$applicationManagerClass = t3lib_div::makeInstanceClassName('tx_community_ApplicationManager');
+		$applicationManager      = call_user_func(array($applicationManagerClass, 'getInstance'));
+		/* @var $applicationManager tx_community_ApplicationManager */
+
+		$applicationName = $this->pi_getFFvalue(
+			$this->cObj->data['pi_flexform'],
+			'application'
+		);
+		$application = $applicationManager->getApplication($application);
+
+		// get widget from application
+		// execute widget
+		// return widget content
+
+#debug($this, 'this', __LINE__, __FILE__, 10);
+
+
+
+
+		$content = 'hello community!';
+
+		return $this->pi_wrapInBaseClass($content);
 	}
 }
 
