@@ -3,13 +3,14 @@ if (!defined ('TYPO3_MODE')) {
 	die ('Access denied.');
 }
 
+$PATH_community = t3lib_extMgm::extPath('community');
 
 $TX_COMMUNITY = array(
 	'applications' => array(
 		'userProfile' => array(
 			'label' => 'LLL:EXT:community/lang/locallang_applications.xml:userProfile',
 			'widgets' => array(
-				'imageWidget' => array(
+				'image' => array(
 					'classReference' => 'EXT:community/controller/userprofile/class.tx_community_controller_userprofile_imagewidget.php:tx_community_controller_userprofile_ImageWidget',
 					'label' => 'LLL:EXT:community/lang/locallang_applications.xml:userProfile.image'
 				),
@@ -33,11 +34,11 @@ $TX_COMMUNITY = array(
 					'classReference' => 'EXT:community/controller/userprofile/class.tx_community_controller_userprofile_imagewidget.php:tx_community_controller_userprofile_ImageWidget',
 					'label' => 'LLL:EXT:community/lang/locallang_applications.xml:userProfile.image'
 				),
+*/
 				'information' => array(
 					'classReference' => 'EXT:community/controller/userprofile/class.tx_community_controller_userprofile_informationwidget.php:tx_community_controller_userprofile_InformationWidget',
 					'label' => 'LLL:EXT:community/lang/locallang_applications.xml:userProfile.information'
 				)
-*/
 			)
 		),
 /*		'groupProfile' => array(
